--- a/.github/workflows/build-image-push-aliyun.yml
+++ b/.github/workflows/build-image-push-aliyun.yml
@@ -9,10 +9,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu:22.04
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v4.2.2
+        with: 
+          repository: git@github.com:risuxx/ARL.git
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Build Docker image
         run: |
