--- a/.github/workflows/build-image-push-aliyun.yml
+++ b/.github/workflows/build-image-push-aliyun.yml
@@ -12,11 +12,10 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@v4.2.2
-        with: 
-          repository: git@github.com:risuxx/ARL.git
-          branch: master
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Build Docker image
         run: |
