调整dockerfile安装依赖，然后让action分部完成

--- a/.github/workflows/build-image-push-aliyun.yml
+++ b/.github/workflows/build-image-push-aliyun.yml
@@ -20,7 +20,10 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t risuxx/arl:latest .
+  test:
+    runs-on: ubuntu-latest
 
+    steps:
       - name: Test Docker image
         run: |
           docker run --name arl-test -d -p 5003:5003 risuxx/arl:latest
@@ -32,7 +35,10 @@ jobs:
       - name: Pack image file
         run: |
           docker save -o arl.tar risuxx/arl:latest
+  deploy:
+    runs-on: ubuntu-latest
 
+    steps:
       - name: Push to Aliyun ECS
         env:
           PRIVATE_KEY: ${{ secrets.ALIYUN_ECS_SSH_PRIVATE_KEY }}
