--- a/.github/workflows/build-image-push-aliyun.yml
+++ b/.github/workflows/build-image-push-aliyun.yml
@@ -22,10 +22,10 @@ jobs:
           docker build -t risuxx/arl-base:latest .
           docker run --privileged -it -d -p 5003:5003 --name=arl --restart=always risuxx/arl-base:latest /usr/sbin/init
           sleep 30
-          docker exec -it arl /bin/bash
-          bash misc/setup-arl.sh
-          exit
+          docker exec arl bash -c "bash misc/setup-arl.sh"
           docker commit --change='ENTRYPOINT ["/bin/bash", "/opt/ARL/misc/start-service-arl.sh"]' arl risuxx/arl:latest
+          docker stop arl
+          docker rm arl
 
   test:
     runs-on: ubuntu-latest
