--- a/.github/workflows/update-docker-image.yml
+++ b/.github/workflows/update-docker-image.yml
@@ -31,12 +31,6 @@ jobs:
     
     steps:
       - name: Push to Aliyun ECS
-        env:
-          PRIVATE_KEY: ${{ secrets.ALIYUN_ECS_SSH_PRIVATE_KEY }}
-          HOST: ${{ secrets.ALIYUN_ECS_HOST }}
-          USER: ${{ secrets.ALIYUN_ECS_USER }}
         run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          scp -i private_key -o StrictHostKeyChecking=no arl.tar $USER@$HOST:~
-          ssh -i private_key -o StrictHostKeyChecking=no $USER@$HOST "docker load -i arl.tar"
-          rm -f private_key
+          scp -o StrictHostKeyChecking=no arl.tar aliyun:/root/ 
+          ssh -o StrictHostKeyChecking=no aliyun "docker load -i arl.tar"
