--- a/.github/workflows/update-docker-image.yml
+++ b/.github/workflows/update-docker-image.yml
@@ -42,7 +42,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no aliyun "docker exec arl bash -c 'rabbitmqctl add_user arl arlpassword'"
           ssh -o StrictHostKeyChecking=no aliyun "docker exec arl bash -c 'rabbitmqctl add_vhost arlv2host'"
           ssh -o StrictHostKeyChecking=no aliyun "docker exec arl bash -c 'rabbitmqctl set_user_tags arl arltag'"
-          ssh -o StrictHostKeyChecking=no aliyun "docker exec arl bash -c 'rabbitmqctl set_permissions -p arlv2host arl ".*" ".*" ".*"'"
+          ssh -o StrictHostKeyChecking=no aliyun "docker exec arl bash -c 'rabbitmqctl set_permissions -p arlv2host arl \".*\" \".*\" \".*\"'"
           ssh -o StrictHostKeyChecking=no aliyun "docker exec arl bash -c 'cd /etc/systemd/system && systemctl restart arl*'"
           
           
